--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -2,60 +2,59 @@
 *[[w:IPA|IPA]]: /'mʌskɽæt/
 
 === Noun ===
-
 '''muskrat'''
 
 # [[animal]]
 
 === Translations ===
 
-*[[Basque]]: [[arratoi musketadun]]
-*[[Belarussian]]: [[андатра]]
-*[[Bosnian]]: [[bizamski pacov]] ''m''
-*[[Breton]]: [[razh-musk]]
-*[[Bulgarian]]: [[мускус]] ([[muskus]])
-*[[Croatian]]: [[mošusni/ bizamski štakor]]
-*[[Czech]]: [[ondatra]]
-*[[Danish]]: [[bisamrotte]]
-*[[Dutch]]: [[muskusrat]] ''f''
-*[[Esperanto]]: [[ondatro]]
-*[[Estonian]]: [[ondatra]]
-*[[Faroese]]: [[moskusrotta]]
-*[[Finnish]]: [[piisami]]
-*[[French]]: [[rat musqué]] ''m''
-*[[Frisian]]: [[muskusrôt]]
-*[[Gallegan]]: [[aguaneira]]
-*[[German]]: [[Bisamratte]] ''f''
-*[[Greek]]: [[μοσχοπόντικας]] '' ''
-*[[Hungarian]]: [[pézsma]]
-*[[Icelandic]]: [[moskusrotta]], [[bísamrotta]]
-*[[Indonesian]]: [[]]
-*[[Irish]]: [[muscfhrancach]]
-*[[Italian]]: [[topo muschiato]] ''m''
-*[[Japanese]]: [[]] ([[]], )
-*[[Latin]]: [[Ondatra zibethicus]] '' ''
-*[[Latvian]]: [[ondatra]]
-*[[Lithuanian]]: [[ondatra]]
-*[[Lower Sorbian]]: [[bizamowy šćurk]]
-*[[Macedonian]]: [[бизамски стаорец]] ([[bizamski staorec]])
-*[[Maltese]]: [[far tal-misk ta’ l-ilma]]
-*[[Norwegian]]: [[bisamrotte]]
-*[[Polish]]: [[piżmak]] '' ''
-*[[Portuguese]]: [[rato almiscareiro]]
-*[[Romanian]]: [[bizam]]
-*[[Romansh]]: [[undatra]]
-*[[Russian]]: [[ондатра]] ([[ondatra]]) '' ''
-*[[Sami]]: [[bisámroahttu]]
-*[[Sardinian]]: [[medrona muscada]], [[topi muscau]]
-*[[Scottish]]: [[radan molach]]
-*[[Serbian]]: [[бизамски пацов]] ([[bizamski pacov]])
-*[[Slovak]]: [[ondatra pižmová]]
-*[[Slovenian]]: [[pižmovka]] ''f''
-*[[Spanish]]: [[rata almizclera]] '' ''
-*[[Swedish]]: [[bisam]]
-*[[Turkish]]: [[misk sıçanı]]
-*[[Ukrainian]]: [[ондатра]] ([[ondatra]])
-*[[Upper Sorbian]]: [[pižmo]], [[pižmowa šćura]], [[bizamowa myš]]
-*[[Welsh]]: [[mwsglygoden]], [[llygoden fwsg]]
+*'''Basque''': [[arratoi musketadun]]
+*'''Belarussian''': [[андатра]]
+*'''Bosnian''': [[bizamski pacov]] ''m''
+*'''Breton''': [[razh-musk]]
+*'''Bulgarian''': [[мускус]] ([[muskus]])
+*'''Croatian''': [[mošusni/ bizamski štakor]]
+*'''Czech''': [[ondatra]]
+*'''Danish''': [[bisamrotte]]
+*'''Dutch''': [[muskusrat]] ''f''
+*'''Esperanto''': [[ondatro]]
+*'''Estonian''': [[ondatra]]
+*'''Faroese''': [[moskusrotta]]
+*'''Finnish''': [[piisami]]
+*'''French''': [[rat musqué]] ''m''
+*'''Frisian''': [[muskusrôt]]
+*'''Gallegan''': [[aguaneira]]
+*'''German''': [[Bisamratte]] ''f''
+*'''Greek''': [[μοσχοπόντικας]] '' ''
+*'''Hungarian''': [[pézsma]]
+*'''Icelandic''': [[moskusrotta]], [[bísamrotta]]
+*'''Indonesian''': [[]]
+*'''Irish''': [[muscfhrancach]]
+*'''Italian''': [[topo muschiato]] ''m''
+*'''Japanese''': [[]] ([[]], )
+*'''Latin''': [[Ondatra zibethicus]] '' ''
+*'''Latvian''': [[ondatra]]
+*'''Lithuanian''': [[ondatra]]
+*'''Lower Sorbian''': [[bizamowy šćurk]]
+*'''Macedonian''': [[бизамски стаорец]] ([[bizamski staorec]])
+*'''Maltese''': [[far tal-misk ta’ l-ilma]]
+*'''Norwegian''': [[bisamrotte]]
+*'''Polish''': [[piżmak]] '' ''
+*'''Portuguese''': [[rato almiscareiro]]
+*'''Romanian''': [[bizam]]
+*'''Romansh''': [[undatra]]
+*'''Russian''': [[ондатра]] ([[ondatra]]) '' ''
+*'''Sami''': [[bisámroahttu]]
+*'''Sardinian''': [[medrona muscada]], [[topi muscau]]
+*'''Scottish''': [[radan molach]]
+*'''Serbian''': [[бизамски пацов]] ([[bizamski pacov]])
+*'''Slovak''': [[ondatra pižmová]]
+*'''Slovenian''': [[pižmovka]] ''f''
+*'''Spanish''': [[rata almizclera]] '' ''
+*'''Swedish''': [[bisam]]
+*'''Turkish''': [[misk sıçanı]]
+*'''Ukrainian''': [[ондатра]] ([[ondatra]])
+*'''Upper Sorbian''': [[pižmo]], [[pižmowa šćura]], [[bizamowa myš]]
+*'''Welsh''': [[mwsglygoden]], [[llygoden fwsg]]
 
-[[Category:English mammals]]
+[[Category:Mammals]]
