--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -11,8 +11,10 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek [[θεωρία]].
 #: ''I have a '''theory''' about who broke into the school last night, but it’s just a '''theory'''.''
 #{{uncountable}} An [[expectation]] of what [[should]] [[happen]], [[barring]] [[unforeseen]] [[circumstances]].
 #: ''So we’ll be there in three hours?'' — ''That’s the '''theory'''.''
-#{{countable}} {{science}}  1. A [[coherent]] [[statement]] or set of statements that [[attempt]]s to [[explain]] [[observe]]d [[phenomenon|phenomena]].  2. a [[logical]] structure that enables one to [[deduce]] the possible results of every [[experiment]] that falls within its purview
+#{{countable}} {{science}}  A [[coherent]] [[statement]] or set of statements that [[attempt]]s to [[explain]] [[observe]]d [[phenomenon|phenomena]].  
 #: ''There is now a well-developed '''theory''' of electrical charge.''
+#{{countable}} {{science}}  A [[logical]] structure that enables one to [[deduce]] the possible results of every [[experiment]] that falls within its purview
+#: ''The '''theory''' of relativity was proposed by Einstein''
 #{{uncountable}} {{mathematics}} A [[field]] of [[study]] attempting to [[exhaustive]]ly [[describe]] a particular [[class]] of [[construct]]s. <!-- Not quite broad enough to include "music theory". Where do we put that? -->
 #: ''Knot '''theory''' classifies the mappings of a circle into 3-space.''
 #{{countable}} (''logic'') A [[set]] of [[axiom]]s, together with all [[statement]]s [[derivable]] from them.
