--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -2,11 +2,20 @@
 ===Noun===
 {{en-noun-reg}}
 
-# One [[fourth]] of a [[circle]] or [[disc]]; a sector with an [[angle]] of 90&deg;. 
+# One of the four [[section]]s made by dividing an area with two perpendicular lines.
+#{{mathematics}}: The four regions of the [[Cartesian plane]] bounded by the [[x-axis]] and [[y-axis]]. 
+#{{geometry}}: One [[fourth]] of a [[circle]] or [[disc]]; a sector with an [[angle]] of 90&deg;. 
 #{{nautical}}: A [[measuring]] [[device]] with a graduated arc of 90&deg; used in locating an altitude.
-#{{mathematics}}: One of the four [[section]]s made by dividing an area with two perpendicular lines, especially the four regions of the [[Cartesian plane]] divided by the [[x-axis]] and [[y-axis]]. 
 
 ====Translations====
+'''section'''
+{{top}}
+*Dutch: [[kwadrant]]  ''n''
+*[[w:Finnish language|Finnish]]: [[kvadrantti]]
+{{mid}}
+*Swedish: [[kvadrant]] ''c''
+{{bottom}}
+
 '''fourth of a circle'''
 {{top}}
 *Dutch: [[kwadrant]]  ''n''
@@ -19,14 +28,6 @@
 {{top}}
 *Dutch: [[kwadrant]]  ''n''
 {{mid}}
-{{bottom}}
-
-'''section'''
-{{top}}
-*Dutch: [[kwadrant]]  ''n''
-*[[w:Finnish language|Finnish]]: [[kvadrantti]]
-{{mid}}
-*Swedish: [[kvadrant]] ''c''
 {{bottom}}
 
 ===See also===
