--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -66,6 +66,7 @@ Old English ''[[stæf]]''
 [[Category:English words with multiple plurals]]
 
 [[ang:staff]]
+[[de:staff]]
 [[fr:staff]]
 [[io:staff]]
 [[it:staff]]
