--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -6,10 +6,6 @@ From Latin '''[[#Latin|qua]]''', ''as'', ''"in the capacity of"''.
 *{{IPA|/kwɑː/}}
 *:Rhymes: [[Rhymes:English:-eɪ|-eɪ]]
 
-===Preposition===
-{{en-prep|-}}
-
-# In the character of, in terms of.
 ===Adverb===
 {{en-adv|-}}
 
@@ -23,6 +19,82 @@ From Latin '''[[#Latin|qua]]''', ''as'', ''"in the capacity of"''.
 {{mid}}
 {{bottom}}
 
+----
+
+==Chinese==
+
+===Etymology===
+The suffix has been used since around the 17th and 18th century. It is believed to be a corruption of the word [[kuan]] - meaning ''official'' in Chinese. Since "hong" merchants were technically [[Mandarin]]s of the lowest (9th) rank, the suffix "qua" was added to their names in honour of their positions in the [[w:Qing]] government.
+
+===Suffix===
+'''qua'''
+
+*Added to names of Chinese [[hong]] merchants.
+*as in "''Powqua,''" "''Chinqua''", etc.  
+
+----
+
+==Dutch==
+
+===Adverb===
+'''qua'''
+
+# [[#English|qua]]
+
+----
+
+==Ido==
+
+===Pronoun===
+'''qua'''
+
+# [[who]]
+
+[[Category:Ido language]]
+
+----
+
+==Italian==
+
+===Pronunciation===
+*{{IPA|/kwa/}}
+
+===Adverb===
+'''qua'''
+
+# [[here]] (''relatively close to the speaker'') <!--can't remember whether this is true, or whether this applies to "qui" instead-->
+
+===See also===
+*[[là#Italian|là]]
+*[[li#Italian|li]]
+*[[qui#Italian|qui]]
+
+----
+
+==Latin==
+
+===Adverb===
+'''qua'''
+
+# [[as]]; in the capacity or character of
+# in so far as
+#: ''ens qua ens'' ("being as being")
+
+----
+
+==Vietnamese==
+===Preposition===
+'''qua'''
+# [[through]], [[across]], [[by]]
+
+===Adjective===
+'''qua'''
+# [[last#Adjective|last]]
+
+===Intransitive verb===
+'''qua'''
+# to be [[gone]]
+# to [[cross#Verb|cross]]
 
 [[Category:Italian adverbs]]
 [[Category:Latin adverbs]]
