--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -70,8 +70,8 @@
 
 # A [[curve]].
 #: ''There's a sharp bend in the road ahead.''
-# {{nautical}} Any of the various [[knot]]s which join the ends of two [[line]]s or the end of a line into some other object; 
-<!--#* Note: In naval parlance, a knot involves splicing the strands of a rope.-->
+# {{nautical}} Any of the various [[knot]]s which join the ends of two [[line]]s<!-- or the end of a line into some other object; (the latter are called hitch) 
+#* Note: In naval parlance, a knot involves splicing the strands of a rope.-->
 # (''plural, medicine, diving'') '''The bends''': A severe condition caused by excessively quick decompression, causing bubbles of [[nitrogen]] to form in the [[blood]]; [[decompression sickness]].
 #: ''A diver who stays deep for too long must ascend very slowly in order to prevent the bends.''
 # {{heraldry}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] one [[third]].
