--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -8,15 +8,25 @@
 {{en-verb|bends|bending|bent}}
 
 # {{transitive}} To cause (something) to change its shape into a [[curve]], by [[physical]] [[force]], [[chemical]] action, or any other means.
-#: ''To bow properly, '''bend''' at the waist.''
+#: ''If you '''bend''' the pipe too far, it will break.''
+#: ''Don't '''bend''' your knees.''
 # {{transitive}} {{nautical}} To [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make fast. (FM 55-501).
 #: '''''Bend''' the sail to the yard.''
 # {{transitive}} {{nautical}} To [[swing]] the [[body]] when [[rowing]]
 # {{transitive}} {{music}} To smoothly change the pitch of a note.
 #: ''You should '''bend''' the G sligthly sharp in the next measure.''
 # {{intransitive}}  To become [[curve]]d.
+#: ''Look at the trees '''bending''' in the wind.''
+#: ''To bow properly, '''bend''' at the waist.''
 # {{intransitive}} To change direction.
 #: ''The road bends to the right''
+
+====Derived terms====
+*[[bend down]]
+*[[bend over]]
+*[[bend over backwards]]
+*[[bend somebody's ear]]
+*[[on bended knee]]
 
 ====Translations====
 {{trans-top|to shape into a curve}}
