--- a/en/a/Ancestor Night.741683.wikitext
+++ b/en/a/Ancestor Night.741683.wikitext
@@ -15,9 +15,12 @@
 #: '''''Ancestors Night''' marks the end of summer and the beginning of winter.'' 
 #: ''Other names are the Festival of Remembrance, the Feast of Apples,'''Ancestor Night''' or the Feast of the Dead.''
 
-===References===
-
-*'''1999''', Thunder issue 12 - privately published journal (text on www.thorshof.org)
-* '''1999''', The Wheel of the Wiccan Year, Gail Duff 0-7126-1230-0 page 23.
-*'''1991''',  Norse Magic, D J Conway, Llewellyn Publications 0-87542-137-7 page 51.
-*'''2003''', The Tale of Aelfstan and the Aelfar Princess, Wulf Hengestsson, Gewicceham Hearth Books (privately published) page 18.
+====Quotations====
+* '''1991''', D J Conway, Norse Magic, Llewellyn Publications, page 51,
+*: ''This is '''Ancestor Night''', the Feast of the Dead, the night strongest for communication with those gone into the shadow lands, those who now dwell over Bifrost, the Rainbow Bridge to Asgard.''
+* '''1999''', Editorial, Thunder issue 12 (privately published journal), Thorshof, events news page (not numbered).
+*: ''We will then walk (or catch the bus) back to Thorshof for the '''ancestors night''' ceremony and party.''
+* '''1999''',Gail Duff,The Wheel of the Wiccan Year, page 23.
+*:''Other names are the Festival of Remembrance, the Feast of Apples, '''Ancestor Night''' or the Feast of the Dead.''
+*'''2003''', Wulf Hengestsson, The Tale of Aelfstan and the Aelfar Princess, (privately published), page 18. 
+*: '''''Ancestors Night''' marks the end of summer and the beginning of winter.''
