--- a/en/r/remobilization.776392.wikitext
+++ b/en/r/remobilization.776392.wikitext
@@ -19,3 +19,5 @@ passage=The sediment content of this sample was assumed to reflect the '''remobi
 # {{medicine}} A [[return]] to [[mobility]].
 #*{{quote-book|1961|I.F. Dersch|US Patent 3088457: Therapeutic Device|page=4|url=http://www.google.com/patents?id=IF1XAAAAEBAJ|
 passage=this result is entirely satisfactory and offers possibilities of gradual '''remobilization''' of unfit individuals or inducing them to take a first step towards renewing active lives.}}
+
+[[zh:remobilization]]
