--- a/en/s/safety-valve.774770.wikitext
+++ b/en/s/safety-valve.774770.wikitext
@@ -6,3 +6,5 @@
 # {{form of|Attributive form|[[safety valve]]|nodot=1}}, ''noun''.
 {{#if:{{{2|}}}|#:''{{{2}}}''|}}
 [[Category:English adjectives]]
+
+[[vi:safety-valve]]
