--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -76,6 +76,9 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 ====Usage note====
 * Both the plural forms of ''-a'' and ''-ums'' are correct and used in everyday language.
 
+===See also===
+* [[-s#Duth|-s]]
+
 [[Category:Dutch suffixes|um]]
 
 ----
