--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -77,7 +77,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * Both the plural forms of ''-a'' and ''-ums'' are correct and used in everyday language.
 
 ===See also===
-* [[-s#Duth|-s]]
+* [[-s#Dutch|-s]]
 
 [[Category:Dutch suffixes|um]]
 
