--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -39,7 +39,7 @@
 *German: [[Quacksalber]] {{m}}
 *Greek: {{t|el|κομπογιαννίτης|m|}} (kompoyannítis), {{t|el|αλμπάνης|m|}} (albánis)
 {{trans-mid}}
-*russian: [[шарлатан]] (šarlatán) {{m}}
+*Russian: [[шарлатан]] (šarlatán) {{m}}
 *Swedish: [[kvacksalvare]] {{c}}
 {{trans-bottom}}
 
@@ -47,7 +47,7 @@
 *Finnish: [[huijari]]
 *German: [[Quacksalber]] {{m}}
 {{trans-mid}}
-*russian: [[шарлатан]] (šarlatán) {{m}}
+*Russian: [[шарлатан]] (šarlatán) {{m}}
 *Greek: {{t|el|τσαρλατάνος|m|}} (tsarlatános)
 {{trans-bottom}}
 
