--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -37,6 +37,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * [[conservatorium]]
 * [[continuum]]
 * [[criterium]]
+* [[datum]]
 * [[decennium]]
 * [[delirium]]
 * [[desideratum]]
