--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 '''CD-ROM''' ''or'' '''[[CD ROM]]'''
 
-# ''part {{initialism}}'' Compact Disk - ''{{acronym}}'' Read Only Memory.  A device that can read [[CD]]s (Compact Disks), but can not write to them.  Additionally, this is also a class of Compact Disks that are manufactured with the data and shipped, but cannot be written to at all.
+# ''part {{initialism}}'' Compact Disk - ''{{acronym}}'' Read Only Memory.  A device that can read [[CD]]s (Compact Disks), but can shipped, but cannot be written to at all.
 
 [[cs:CD-ROM]]
 [[de:CD-ROM]]
