--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -1,6 +1,9 @@
-== English ==
-=== Alternative forms ===
+==English==
+
+===Alternative forms===
 * [[all bark but no bite]]
-=== Adjective ===
-'''[[all]] [[bark]] and [[no]] [[bite]]'''
+
+===Adjective===
+'''[[all]] [[bark]] [[and]] [[no]] [[bite]]'''
+
 # {{idiom}} Full of big [[talk]] but lacking [[action]], [[power]], or [[substance]]; [[pretentious]].
