--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -31,6 +31,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 
 ====Derived terms====
 {{rel-top4|Terms which feature the ''-um'' suffix}}
+* [[agendum]]
 * [[antebellum]] (''before war'')
 * [[aquarium]]]
 * [[castellum]]
@@ -64,6 +65,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * [[pessarium]]
 * [[podium]]
 * [[postbellum]] (''after war'')
+* [[referendum]]
 * [[sanatorium]]
 * [[solarium]]
 * [[stadium]]
