--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -48,10 +48,10 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 
 # {{intransitive}} To make an [[offer]] to [[pay]] or [[accept]] a certain [[price]].
 #:''Have you ever '''bid''' in an auction?''
-# {{context|intransitive|card games}} To [[announce]] one’s [[goal]], before starting [[play]].
+# {{context|intransitive|card games}} To [[announce]] one's [[goal]], before starting [[play]].
 # {{transitive}}  To [[offer]] as a [[price]].
 #:''She '''bid''' £2000 for the Persian carpet.''
-# {{context|transitive|card games}} To [[announce]] one’s goal, before starting play.
+# {{context|transitive|card games}} To [[announce]] one's goal, before starting play.
 
 =====Translations=====
 {{trans-top|intransitive: to make an offer}}
