--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -136,6 +136,7 @@ From the noun ''mill''
 *Dutch: [[malen]]
 *Finnish: [[jauhaa]]
 {{trans-mid}}
+*French: [[moudre]]
 {{trans-bottom}}
 
 {{trans-top|shape, polish, etc, using a machine}}
