--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -6,7 +6,7 @@
 
 ===Noun===
 {{en-noun|s|-}}
-
+#   To take away
 # {{arithmetic}} (''uncountable'') The process of [[subtract]]ing a [[number]] from another.
 # {{arithmetic}} (''countable'') A calculation involving [[subtract]]ing.
 #:''The teacher has set us ten subtractions to do by tomorrow.''
