--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -370,7 +370,7 @@
 # {{countable}} {{context|snooker}} The number of points scored by one player in one visit to the table
 # {{countable}} {{surfing}} Place where [[wave]]s break (ie. pitch or spill forward creating white water).
 #: 2005: ''The final '''break''' in the Greenmount area is Kirra Point.'' &mdash; coolangatta.net [http://www.coolangatta.net/coolangatta/surfbreaks.html]
-# {{countable}} {{music}} A short section of music, often between verses, in which some performers stop while others continue. 
+# {{countable}} {{music}} A short section of music, often between verses, in which some performers stop while others continue.
 #: ''The fiddle '''break''' was amazing, it was a pity the singer came back in on the wrong note.''
 
 ====Synonyms====
@@ -440,7 +440,7 @@
 {{trans-mid}}
 {{trans-bottom}}
 
-==== Usage Notes ====
+====Usage notes====
 # {{music}}. The instruments that are named are the ones that carry on playing, for example a '''fiddle break''' implies that the fiddle is the most prominent instrument playing during the break.
 
 [[Category:English ergative verbs]]
