--- a/en/g/Godzone.855219.wikitext
+++ b/en/g/Godzone.855219.wikitext
@@ -8,6 +8,6 @@ Contraction of ''[[God]][['s]] [[own]] [[country]]''.
 ===Noun===
 {{en-noun|-}}
 
-# {{context|New Zealand|colloquial}} [[New Zealand]].
+# {{New Zealand|informal}} [[New Zealand]].
 
 [[ru:Godzone]]
