--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -38,7 +38,7 @@ Morphemes: [[abandon-]] + [[-o]](2).
 # [[abandonment]]
 
 ===Verb===
-{{infl|es|verb}}
+'''abandono'''
 # {{es-verb form of|mood=ind|tense=pres|num=s|pers=1|ending=ar|verb=abandonar}}
 
 [[Category:Spanish nouns]]
