--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -3,9 +3,9 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/bɪd/}}
-*{{audio|en-us-bid.ogg|Audio (US)}}
-*:{{rhymes|ɪd}}
+* {{IPA|/bɪd/}}
+* {{audio|en-us-bid.ogg|Audio (US)}}
+*: {{rhymes|ɪd}}
 
 ===Etymology 1===
 From {{OE.}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’
@@ -14,12 +14,12 @@ From {{OE.}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{OE.}} verb
 {{en-verb|bids|bidding|bade|bidden}}
 
 # {{transitive}} To issue a [[command]]; to [[tell]].
-#:''He '''bade''' me to come in.''
+#: ''He '''bade''' me to come in.''
 # {{transitive}} To [[invite]]; to [[summon]].
-#:''She was '''bidden''' to the wedding.''
+#: ''She was '''bidden''' to the wedding.''
 # {{transitive}} To [[utter]] a [[greeting]] or [[salutation]].
-#:''We '''bade''' him farewell.''
-#:'''1999:''' "[H]e walked up to the village of Wall and '''bade''' good morning to the guards on the gate." &mdash; ''Stardust'', Neil Gaiman, page 15 (2001 Perennial Edition).
+#: ''We '''bade''' him farewell.''
+#: '''1999:''' "[H]e walked up to the village of Wall and '''bade''' good morning to the guards on the gate." &mdash; ''Stardust'', Neil Gaiman, page 15 (2001 Perennial Edition).
 
 =====Translations=====
 {{trans-top|to issue a command}}
@@ -47,10 +47,10 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 {{en-verb|bids|bidding|bid|bid}}
 
 # {{intransitive}} To make an [[offer]] to [[pay]] or [[accept]] a certain [[price]].
-#:''Have you ever '''bid''' in an auction?''
+#: ''Have you ever '''bid''' in an auction?''
 # {{context|intransitive|card games}} To [[announce]] one's [[goal]], before starting [[play]].
 # {{transitive}}  To [[offer]] as a [[price]].
-#:''She '''bid''' £2000 for the Persian carpet.''
+#: ''She '''bid''' £2000 for the Persian carpet.''
 # {{context|transitive|card games}} To [[announce]] one's goal, before starting play.
 
 =====Translations=====
@@ -86,10 +86,9 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 
 # An [[offer]] at an [[auction]].
 # {{context|[[ultimate frisbee]]}} A (failed) attempt to [[receive]] or [[intercept]] a [[pass]].
-#:''Nice '''bid'''!''
+#: ''Nice '''bid'''!''
 
-====Translations====
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
+=====Translations=====
 {{trans-top|offer at an auction}}
 * Dutch: {{t+|nl|bod|n}}
 * Finnish: [[tarjous]]
@@ -105,8 +104,8 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 {{trans-bottom}}
 
 ====Derived terms====
-*[[dummy bid]]
-*[[vendor bid]]
+* [[dummy bid]]
+* [[vendor bid]]
 
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
