--- a/en/s/satirise.774829.wikitext
+++ b/en/s/satirise.774829.wikitext
@@ -7,3 +7,19 @@
 
 [[fr:satirise]]
 [[vi:satirise]]
+
+----
+{{see|satirisé}}
+==French==
+
+===Verb===
+{{fr-verb-form}}
+
+# {{form of|[[first-person|First-person]] [[singular]] [[present indicative]]|satiriser|lang=French}}
+# {{form of|[[third-person|Third-person]] [[singular]] [[present indicative]]| satiriser|lang=French}}
+# {{form of|First-person singular [[present subjunctive]]|satiriser|lang=French}}
+# {{form of|[[third-person|Third-person]] singular [[present subjunctive]]| satiriser|lang=French}}
+# {{form of|Second-person singular [[imperative]]|satiriser |lang=French}}
+
+
+{{rfc-auto}}
