--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -21,62 +21,62 @@
 
 ====Translations====
 {{trans-top|Mustela erminea}}
-*Albanian: [[ermelina]]
-*[[Basque]]: [[erbinude zuri]]
-*Belarussian: [[гарнастай]]
-*[[Breton]]: [[erminig]]
-*Bulgarian: [[хермелин]] ([[hermelin]])
-*[[Catalan]]: [[ermini]]
-*Croatian: [[zerdav]]
-*Czech: [[hranostaj]]
-*Danish: [[hermelin/lækat]]
-*Dutch: [[hermelijn]] {{m}}
-*Esperanto: [[ermeno]]
-*Estonian: [[kärp]], [[lahits]], [[hermeliin]]
-*Faroese: [[roysikøttur]]
-*Finnish: [[kärppä]]
-*French: [[hermine]] {{f}}
-*[[Frisian]]: [[harmeling]]
-*[[Friulian]]: [[armelin]]
-*[[Galician]]: [[armiño]]
-*German: [[Hermelin]] {{n}}
-*Greek: [[ερμίνα]] '' ''
-*Hungarian: [[hermelin]]
-*Icelandic: [[hreysiköttur]]
-*Irish: [[easóg]]
-*Italian: [[ermellino]] {{m}}
+* Albanian: [[ermelina]]
+* [[Basque]]: [[erbinude zuri]]
+* Belarusian: [[гарнастай]]
+* [[Breton]]: [[erminig]]
+* Bulgarian: [[хермелин]] ([[hermelin]])
+* [[Catalan]]: [[ermini]]
+* Croatian: [[zerdav]]
+* Czech: [[hranostaj]]
+* Danish: [[hermelin/lækat]]
+* Dutch: [[hermelijn]] {{m}}
+* Esperanto: [[ermeno]]
+* Estonian: [[kärp]], [[lahits]], [[hermeliin]]
+* Faroese: [[roysikøttur]]
+* Finnish: [[kärppä]]
+* French: [[hermine]] {{f}}
+* [[Frisian]]: [[harmeling]]
+* [[Friulian]]: [[armelin]]
+* [[Galician]]: [[armiño]]
+* German: [[Hermelin]] {{n}}
+* Greek: [[ερμίνα]] '' ''
+* Hungarian: [[hermelin]]
+* Icelandic: [[hreysiköttur]]
+* Irish: [[easóg]]
+* Italian: [[ermellino]] {{m}}
 {{trans-mid}}
-*[[Ladin]]: [[armelin]]
-*Latin: [[Mustela erminea]] '' ''
-*Latvian: [[sermulis]]
-*Lithuanian: [[šermuonėlis]]
-*[[Lower Sorbian]]: [[hermelin]]
-*[[Macedonian]]: [[хермелин]] ([[hermelin]])
-*Maltese: [[ermellin]]
-*Norwegian: [[røyskatt]]
-*[[Occitan]]: [[ermina]]
-*Polish: [[gronostaj]] '' ''
-*Portuguese: [[arminho]] {{m}}
-*Romanian: [[hermelina]]
-*[[Romansh]]: [[ermelin]]
-*[[Romany]]: [[ermina]] {{f}}
-*Russian: [[горностай]] ([[gornostaj]]) '' ''
-*[[Sami]]: [[buoidda]]
-*[[Sardinian]]: [[ermellinu]]
-*[[Scottish]]: [[radan airmeinianach]]
-*Serbian: [[zerdav]] {{m}}
-*Slovak: [[lasica hranostaj]]
-*Slovenian: [[hermelin]]
-*Spanish: [[armiño]] {{m}}
-*Swedish: [[hermelin]]
-*Turkish: [[kakim]]
-*Ukrainian: [[горностай]] ([[gornostaj]])
-*[[Upper Sorbian]]: [[hermelin]], [[(hronostaj)]]
-*Welsh: [[carlwm]]
+* [[Ladin]]: [[armelin]]
+* Latin: [[Mustela erminea]] '' ''
+* Latvian: [[sermulis]]
+* Lithuanian: [[šermuonėlis]]
+* [[Lower Sorbian]]: [[hermelin]]
+* [[Macedonian]]: [[хермелин]] ([[hermelin]])
+* Maltese: [[ermellin]]
+* Norwegian: [[røyskatt]]
+* [[Occitan]]: [[ermina]]
+* Polish: [[gronostaj]] '' ''
+* Portuguese: [[arminho]] {{m}}
+* Romanian: [[hermelina]]
+* [[Romansh]]: [[ermelin]]
+* [[Romany]]: [[ermina]] {{f}}
+* Russian: [[горностай]] ([[gornostaj]]) '' ''
+* [[Sami]]: [[buoidda]]
+* [[Sardinian]]: [[ermellinu]]
+* [[Scottish]]: [[radan airmeinianach]]
+* Serbian: [[zerdav]] {{m}}
+* Slovak: [[lasica hranostaj]]
+* Slovenian: [[hermelin]]
+* Spanish: [[armiño]] {{m}}
+* Swedish: [[hermelin]]
+* Turkish: [[kakim]]
+* Ukrainian: [[горностай]] ([[gornostaj]])
+* [[Upper Sorbian]]: [[hermelin]], [[(hronostaj)]]
+* Welsh: [[carlwm]]
 {{trans-bottom}}
 
 {{trans-top|the white fur of this animal}}
-*Finnish: [[kärpännanhka]], [[hermeliini]]
+* Finnish: [[kärpännanhka]], [[hermeliini]]
 {{trans-bottom}}
 
 {{trans-top|a symbol of purity}}
@@ -86,7 +86,7 @@
 {{trans-bottom}}
 
 {{trans-top|(heraldry) a white field with black spots}}
-*Finnish: [[kärpännahka]]
+* Finnish: [[kärpännahka]]
 {{trans-bottom}}
 
 ===Verb===
