--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -9,29 +9,31 @@ From {{OF.}} ''[[atendre]]'' ({{F.}} ''[[attendre]]'').
 
 ===Verb===
 {{en-verb}}
-# to be at an [[event]]
+
+# To be at an [[event]].
 #:''Failing to '''attend''' the meeting nearly cost her her job.''
-# to [[pay attention]] to; to [[commit]] oneself to; to give [[thought]] and [[care]] to
+# To [[pay attention]] to; to [[commit]] oneself to; to give [[thought]] and [[care]] to.
 
 ====Derived terms====
-*[[attend to]]
+* [[attend to]]
 
 ====Translations====
 {{trans-top|to be at an event}}
-*Hungarian: {{t|hu|eljár}}, {{t|hu|jár}}
+* Finnish: {{t|fi|osallistua}}, {{t|fi|olla}} {{t|fi|läsnä}}
+* Hungarian: {{t|hu|eljár}}, {{t|hu|jár}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|to pay attention to; to commit oneself to; to give thought and care to}}
+* Finnish: {{t|fi|huolehtia}}, {{t|fi|pitää}} {{t|fi|huoli|alt=huolta}},  {{t|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
 {{trans-mid}}
 {{trans-bottom}}
 
 {{checktrans-top}}
-*{{ttbc|Finnish}}: [[osallistua]] (1), [[olla]] [[läsnä]] (1), [[seurata]] (2)
-*{{ttbc|French}}: [[assister]] à (1)
-*{{ttbc|German}}: [[teilnehmen]] [[an]] (1), [[besuchen]] (1), [[beachten]] (2), [[sich]] [[kümmern]] [[um]] (2)
-*{{ttbc|Japanese}}: [[出席する]] (shusseki suru)
-*{{ttbc|Spanish}}: [[asistir]] (1), [[atender]] (2)
+* {{ttbc|French}}: [[assister]] à (1)
+* {{ttbc|German}}: [[teilnehmen]] [[an]] (1), [[besuchen]] (1), [[beachten]] (2), [[sich]] [[kümmern]] [[um]] (2)
+* {{ttbc|Japanese}}: [[出席する]] (shusseki suru)
+* {{ttbc|Spanish}}: [[asistir]] (1), [[atender]] (2)
 {{checktrans-bottom}}
 
 [[zh-min-nan:attend]]
