--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -1,12 +1,15 @@
-{{rfp}}{{rfap}}
 ==English==
+{{wikipedia}}
+
+===Pronunciation===
+* {{a|US}} {{IPA|/wɑːˈhɑː.kɑː/|/wəˈhɑː.kɑː/}}
+{{rfap}}
 
 ===Proper noun===
 {{en-proper-noun}}
-{{wikipedia}}
 
-#One of the 31 [[states]] of [[Mexico]], formally the Free and Sovereign State of Oaxaca,  located in the southern part of the country, west of the Isthmus of Tehuantepec.
-#The largest city in the state of Oaxaca, for which the state is named.
+# One of the 31 [[states]] of [[Mexico]], formally the Free and Sovereign State of Oaxaca,  located in the southern part of the country, west of the Isthmus of Tehuantepec.
+# The largest [[city]] in the state of Oaxaca, for which the state is named.
 
 [[es:Oaxaca]]
 [[fr:Oaxaca]]
