--- a/en/a/allochthonous.802822.wikitext
+++ b/en/a/allochthonous.802822.wikitext
@@ -13,4 +13,5 @@
 * ''The Dictionary of Difficult Words'' [[http://www.tiscali.co.uk/reference/dictionaries/difficultwords/data/d0000625.html]]
 * ''The Free Online Dictionary'' [[http://www.thefreedictionary.com/allochthonous]]
 
+[[ta:allochthonous]]
 [[zh:allochthonous]]
