--- a/en/e/energy source.776613.wikitext
+++ b/en/e/energy source.776613.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|sg=[[energy]] [[source]]}}
 
 # source from which useful energy can be extracted or recovered either directly or by means of a conversion or transformation process (e.g. solid fuels, liquid fuels, solar energy, biomass, etc.)
