--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -57,6 +57,7 @@ From {{OF.}} ''[[atendre]]'' ({{F.}} ''[[attendre]]'').
 [[ro:attend]]
 [[simple:attend]]
 [[fi:attend]]
+[[ta:attend]]
 [[te:attend]]
 [[vi:attend]]
 [[zh:attend]]
