--- a/en/m/microdot.720320.wikitext
+++ b/en/m/microdot.720320.wikitext
@@ -6,4 +6,8 @@
 
 # A [[photographic]] [[image]] that has been [[reduce]]d in size to that of a [[dot]] (typically around 1mm in size and circular) in order to escape detection. <ref name=microdots>[http://www.micro-dots.org/ DotGuard Microdots]</ref>.
 
-DataDot Technology USA, Inc. - Leader in Microdot Identification Technology
+===References===
+<references/>
+
+[[vi:microdot]]
+[[zh:microdot]]
