--- a/en/t/talk down.775561.wikitext
+++ b/en/t/talk down.775561.wikitext
@@ -6,3 +6,5 @@
 #:''If he offers a very high price, see if you can '''talk''' him '''down''' before you agree to anything.
 #{{idiom}} To [[speak]] [[condescendingly]] or as though the listener is [[inferior]].
 #:''She didn't like how he '''talked down''' to her as though she didn't understand.''
+
+[[Category:English phrasal verbs]]
