--- a/en/m/missent.801182.wikitext
+++ b/en/m/missent.801182.wikitext
@@ -7,3 +7,14 @@
 
 [[fr:missent]]
 [[zh:missent]]
+
+----
+==French==
+
+===Verb===
+{{fr-verb-form}}
+
+# {{form of|[[third-person|Third-person]] [[plural]] [[imperfect subjunctive]]|mettre|lang=French}}
+
+
+{{rfc-auto}}
