--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -20,27 +20,27 @@
 
 ====Translations====
 {{trans-top|lose blood through an injured blood vessel}}
-*Arabic: {{ARchar|[[ينزف]]}}
-*Czech: [[krvácet]]
-*Dutch: [[bloeden]]
-*Esperanto: [[sangi]]
-*Finnish: [[vuotaa]] [[veri|verta]]
-*French: [[saigner]]
-*German: [[bluten]]
-*Hebrew: [[לדמם]] (le'damem)
-*Hungarian: [[vérzik]]
-*Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
-{{mid}}
-*Italian: buttare sangue
-*Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
-*Polish: [[krwawić]]
-*Portuguese: [[sangrar]]
-*Romanian: [[sângera]]
-*Russian: [[кровоточить]] (krovotočít')
-*Slovene: [[krvaveti]]
-*Spanish: [[sangrar]]
-*Turkish: [[kanamak]] [-ar]
-{{bottom}}
+* Arabic: {{ARchar|[[ينزف]]}}
+* Czech: [[krvácet]]
+* Dutch: [[bloeden]]
+* Esperanto: [[sangi]]
+* Finnish: [[vuotaa]] [[veri|verta]]
+* French: [[saigner]]
+* German: [[bluten]]
+* Hebrew: [[לדמם]] (le'damem)
+* Hungarian: [[vérzik]]
+* Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
+{{trans-mid}}
+* Italian: buttare sangue
+* Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
+* Polish: [[krwawić]]
+* Portuguese: [[sangrar]]
+* Romanian: [[sângera]]
+* Russian: [[кровоточить]] (krovotočít')
+* Slovene: [[krvaveti]]
+* Spanish: [[sangrar]]
+* Turkish: [[kanamak]] [-ar]
+{{trans-bottom}}
 
 ===References===
 {{R:Century 1911}}
