--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -11,31 +11,34 @@ From {{L.}} [[#Latin|mania]], from {{Gr.}} [[μανία]] (''mania'') "madness".
 | /ˈmeɪniə/ || /"meIni@/
 |}
 
-*'''Hyphenation:''' ma·nia
-*'''Rhymes:''' [[Rhymes:English:-eɪnɪə|-eɪnɪə]]
+* '''Hyphenation:''' ma·nia
+* '''Rhymes:''' [[Rhymes:English:-eɪnɪə|-eɪnɪə]]
 
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
+
 # Violent derangement of mind; madness; insanity.
 # Excessive or unreasonable desire; insane passion affecting one or many people; fanaticism
 <!-- Modified Webster 1913 defs -->
 
 ===Translations===
+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
 {{top}}
-*Greek: [[μανία]] (mania) {{f}}
+* Greek: [[μανία]] (mania) {{f}}
 {{mid}}
 {{bottom}}
 
 ===Related terms===
-*[[batmania]]
-*[[manic]]
-*[[maniac]]
-*[[megalomania]]
+* [[batmania]]
+* [[manic]]
+* [[maniac]]
+* [[megalomania]]
 
 [[Category:Greek derivations]]
 
 ----
+
 ==Italian==
 
 ===Noun===
@@ -46,9 +49,9 @@ From {{L.}} [[#Latin|mania]], from {{Gr.}} [[μανία]] (''mania'') "madness".
 # [[quirk]]
 
 ====Related terms====
-*[[maniacale]]
-*[[maniaco]]
-*[[manicomio]]
+* [[maniacale]]
+* [[maniaco]]
+* [[manicomio]]
 
 [[fa:mania]]
 [[fr:mania]]
